--- a/config/crd/bases/fluentbit.fluent.io_clusterfilters.yaml
+++ b/config/crd/bases/fluentbit.fluent.io_clusterfilters.yaml
@@ -473,6 +473,11 @@ spec:
                         alias:
                           description: Alias for the plugin
                           type: string
+                        allowlistKeys:
+                          description: If the key is not matched, that field is removed.
+                          items:
+                            type: string
+                          type: array
                         records:
                           description: Append fields. This parameter needs key and
                             value pair.
